--- a/smarty/_advantages.html
+++ b/smarty/_advantages.html
@@ -3,9 +3,9 @@
 		<div class="row">
 			<div class="col-lg-12 wow fadeInUp" data-wow-duration=".6s" data-wow-delay="1.2s">
 				<div class="section__title">
-					<h5>Почему клиенты выбирают нас?</h5>
+					<h5><!--{$Parameters.index_customers_choose}--></h5>
 					<div class="section__separator">
-						<p>Мы зарекомендовали себя с лучшей стороны, наши клиенты всегда довольны результатом на 100%</p>
+						<p><!--{$Parameters.index_customers_100}--></p>
 					</div>
 				</div>
 			</div>
@@ -15,56 +15,56 @@
 		<div class="row">
 			<div class="col-xs-12 col-sm-6 col-md-3 col-lg-2 center">
 				<div class="col__advanages">
-					<img alt="Солнечные электростанции: компания «Maxisolar»" src="<!--{$SITE__TEMPLATE}-->/images/ico_p4.png">
+					<img alt="<!--{$Parameters.customers_title_1}--> - «Maxisolar»" src="<!--{$SITE__TEMPLATE}-->/images/ico_p4.png">
 					<div class="title">
-						<p>Профессионализм</p>
+						<p><!--{$Parameters.customers_title_1}--></p>
 					</div>
-					<p>Наша команда - это лучшие специалисты с большим опытом в энергетике</p>
+					<p><!--{$Parameters.customers_dpn_1}--></p>
 				</div>
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-3 col-lg-2 center">
 				<div class="col__advanages">
-					<img alt="Солнечные электростанции: компания «Maxisolar»" src="<!--{$SITE__TEMPLATE}-->/images/ico_p1.png">
+					<img alt="<!--{$Parameters.customers_title_2}--> - «Maxisolar»" src="<!--{$SITE__TEMPLATE}-->/images/ico_p1.png">
 					<div class="title">
-						<p>Качество</p>
+						<p><!--{$Parameters.customers_title_2}--></p>
 					</div>
-					<p>Даем гарантию на все выполненные работы, оборудование и материалы</p>
+					<p><!--{$Parameters.customers_dpn_2}--></p>
 				</div>
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-3 col-lg-2 center">
 				<div class="col__advanages">
-					<img alt="Солнечные электростанции: компания «Maxisolar»" src="<!--{$SITE__TEMPLATE}-->/images/ico_p5.png">
+					<img alt="<!--{$Parameters.customers_title_3}--> - «Maxisolar»" src="<!--{$SITE__TEMPLATE}-->/images/ico_p5.png">
 					<div class="title">
-						<p>Полный сервис</p>
+						<p><!--{$Parameters.customers_title_3}--></p>
 					</div>
-					<p>Консультация, проект, монтаж, сервис, подключение «Зеленого» тарифа</p>
+					<p><!--{$Parameters.customers_dpn_3}--></p>
 				</div>
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-3 col-lg-2 center">
 				<div class="col__advanages">
-					<img alt="Солнечные электростанции: компания «Maxisolar»" src="<!--{$SITE__TEMPLATE}-->/images/ico_p2.png">
+					<img alt="<!--{$Parameters.customers_title_4}--> - «Maxisolar»" src="<!--{$SITE__TEMPLATE}-->/images/ico_p2.png">
 					<div class="title">
-						<p>Оборудование</p>
+						<p><!--{$Parameters.customers_title_4}--></p>
 					</div>
-					<p>Мы сотрудничаем с надежными поставщиками оборудования</p>
+					<p><!--{$Parameters.customers_dpn_4}--></p>
 				</div>
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-3 col-lg-2 center">
 				<div class="col__advanages">
-					<img alt="Солнечные электростанции: компания «Maxisolar»" src="<!--{$SITE__TEMPLATE}-->/images/ico_p6.png">
+					<img alt="<!--{$Parameters.customers_title_5}--> - «Maxisolar»" src="<!--{$SITE__TEMPLATE}-->/images/ico_p6.png">
 					<div class="title">
-						<p>Лучшая цена</p>
+						<p><!--{$Parameters.customers_title_5}--></p>
 					</div>
-					<p>Работаем напрямую с производителями и дистрибьюторами оборудования</p>
+					<p><!--{$Parameters.customers_dpn_5}--></p>
 				</div>
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-3 col-lg-2 center">
 				<div class="col__advanages">
-					<img alt="Солнечные электростанции: компания «Maxisolar»" src="<!--{$SITE__TEMPLATE}-->/images/ico_p3.png">
+					<img alt="<!--{$Parameters.customers_title_6}--> - «Maxisolar»" src="<!--{$SITE__TEMPLATE}-->/images/ico_p3.png">
 					<div class="title">
-						<p>Точно в срок</p>
+						<p><!--{$Parameters.customers_title_6}--></p>
 					</div>
-					<p>Мы строго придерживаемся установленных планов и сроков</p>
+					<p><!--{$Parameters.customers_dpn_6}--></p>
 				</div>
 			</div>
 		</div>
