--- a/smarty/_partners.html
+++ b/smarty/_partners.html
@@ -3,9 +3,9 @@
 		<div class="row">
 			<div class="col-lg-12">
 				<div class="section__title">
-					<h4>Наши постоянные партнеры</h4>
+					<h4><!--{$Parameters.partners_titled}--></h4>
 					<div class="section__separator">
-						<p>Сотрудничаем с известными компаниями и производителями</p>
+						<p><!--{$Parameters.partners_dpn}--></p>
 					</div>
 				</div>
 			</div>
@@ -14,27 +14,11 @@
 	<div class="container-full">
 		<div class="row relative">
 			<div id="owl__slider__partners">
-				<div class="item center">
-					<img alt="Solar Ukrainian Syatems" src="/images/images1.jpg">
+				<!--{section name=u loop=$achievements}-->
+				<div class="item">
+					<img alt="<!--{$achievements[u].name}-->" src="<!--{$achievements[u].img}-->">
 				</div>
-				<div class="item center">
-					<img alt="Solar Steelconstruction" src="/images/images2.jpg">
-				</div>
-				<div class="item center">
-					<img alt="Altek Alternative Technologies" src="/images/images3.jpg">
-				</div>
-				<div class="item center">
-					<img alt="Укргазбанк" src="/images/images4.jpg">
-				</div>
-				<div class="item center">
-					<img alt="Helios Strategia" src="/images/images5.jpg">
-				</div>
-				<div class="item center">
-					<img alt="Fronius Service Partner" src="/images/images6.jpg">
-				</div>
-				<div class="item center">
-					<img alt="Компания «Атмосфера»" src="/images/images7.jpg">
-				</div>
+				<!--{/section}-->
 			</div>
 			<div class="owl__slider__controls">
 				<div class="slider_arrow slider_arrow_left"><span class="lnr lnr-chevron-left"></span></div>
