--- a/smarty/_projects.html
+++ b/smarty/_projects.html
@@ -21,8 +21,8 @@
                             <img src="<!--{$project_top[i].img}-->" alt="<!--{$project_top[i].name}-->">
                             <div class="col__project__layer"></div>
                             <div class="col__project__link">
-                                <a class="btn white-color b-large b-60" title="Подробнее" href="<!--{$project_top[i].href}-->"><span class="lnr lnr-link"></span> Подробнее</a>
-                                <a data-reveal-id="findprice" class="btn orange-color b-large b-60" title="Узнать стоимость">Узнать стоимость</a>
+                                <a class="btn white-color b-large b-60" title="<!--{$Parameters.get_more}-->" href="<!--{$project_top[i].href}-->"><span class="lnr lnr-link"></span> <!--{$Parameters.get_more}--></a>
+                                <a data-reveal-id="findprice" class="btn orange-color b-large b-60" title="<!--{$Parameters.get_price}-->"><!--{$Parameters.get_price}--></a>
                             </div>   
                             <span class="col__project__tariff"><span class="lnr lnr-leaf"></span> Зеленый тариф</span>			
                         </div>
