--- a/smarty/_services.html
+++ b/smarty/_services.html
@@ -15,40 +15,13 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-3 col-lg-4 wow fadeInLeftBig center" data-wow-duration=".9s" data-wow-delay=".2s">
-					<div class="col__services">
-						<a href="/" title="Солнечные электростанции: компания «Maxisolar»">
-							<img alt="Солнечные электростанции: компания «Maxisolar»" src="<!--{$SITE__TEMPLATE}-->/images/icon_2.png">
-						</a>
-						<div class="title">
-							<a href="/">Частные солнечные электростанции</a>
-						</div>  
-						<p>Строительство солнечных электростанций для дома или дачи</p>
-						<a class="btn b-average orange-color" href="/" title="Подробнее">Подробнее <span class="lnr lnr-chevron-right"></span></a>
-					</div>
+					<!--{$Globalpages.service_block_1}-->
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-3 col-lg-4 center">
-					<div class="col__services border">
-						<a href="/" title="Солнечные электростанции: компания «Maxisolar»">
-							<img alt="Солнечные электростанции: компания «Maxisolar»" src="<!--{$SITE__TEMPLATE}-->/images/icon_1.png">
-						</a>
-						<div class="title">
-							<a href="/">Коммерческие солнечные электростанции</a>
-						</div>  
-						<p>Строительство электростанций для бизнеса и предприятий</p>
-						<a class="btn b-average orange-color" href="/" title="Подробнее">Подробнее <span class="lnr lnr-chevron-right"></span></a>
-					</div>
+					<!--{$Globalpages.service_block_2}-->
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-3 col-lg-4 wow fadeInRightBig center" data-wow-duration=".9s" data-wow-delay=".2s">
-					<div class="col__services">
-						<a href="/" title="Солнечные электростанции: компания «Maxisolar»">
-							<img alt="Солнечные электростанции: компания «Maxisolar»" src="<!--{$SITE__TEMPLATE}-->/images/icon_5.png">
-						</a>
-						<div class="title">
-							<a href="/">Автономное и резервное электроснабжение</a>
-						</div>  
-						<p>Системы автономного  и резервного электроснабжения</p>
-						<a class="btn b-average orange-color" href="/" title="Подробнее">Подробнее <span class="lnr lnr-chevron-right"></span></a>
-					</div>
+					<!--{$Globalpages.service_block_3}-->
 				</div>
 			</div>
 			
@@ -56,40 +29,13 @@
 			
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-3 col-lg-4 wow fadeInLeftBig center" data-wow-duration=".6s" data-wow-delay=".3s" data-wow-offset="200">
-					<div class="col__services">
-						<a href="/" title="Солнечные электростанции: компания «Maxisolar»">
-							<img alt="Солнечные электростанции: компания «Maxisolar»" src="<!--{$SITE__TEMPLATE}-->/images/icon_3.png">
-						</a>
-						<div class="title">
-							<a href="/">«Зеленый» тариф</a>
-						</div>  
-						<p>Гарантированно оформим договор «Зеленого» тарифа</p>
-						<a class="btn b-average orange-color" href="/" title="Подробнее">Подробнее <span class="lnr lnr-chevron-right"></span></a>
-					</div>
+					<!--{$Globalpages.service_block_4}-->
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-3 col-lg-4 wow fadeIn center" data-wow-duration=".6s" data-wow-delay=".3s" data-wow-offset="180">
-					<div class="col__services border">
-						<a href="/" title="Солнечные электростанции: компания «Maxisolar»">
-							<img alt="Солнечные электростанции: компания «Maxisolar»" src="<!--{$SITE__TEMPLATE}-->/images/icon_6.png">
-						</a>
-						<div class="title">
-							<a href="/">Электромонтажные работы</a>
-						</div>  
-						<p>Полный спектр услуг сфере электроснабжения и электромонтажа </p>
-						<a class="btn b-average orange-color" href="/" title="Подробнее">Подробнее <span class="lnr lnr-chevron-right"></span></a>
-					</div>
+					<!--{$Globalpages.service_block_5}-->
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-3 col-lg-4 wow fadeInRightBig center" data-wow-duration=".6s" data-wow-delay=".3s" data-wow-offset="200">
-					<div class="col__services">
-						<a href="/" title="Солнечные электростанции: компания «Maxisolar»">
-							<img alt="Солнечные электростанции: компания «Maxisolar»" src="<!--{$SITE__TEMPLATE}-->/images/icon_4.png">
-						</a>
-						<div class="title">
-							<a href="/">Гарантия и сервис</a>
-						</div>  
-						<p>Предоставим полное гарантийное и сервисное обслуживание</p>
-						<a class="btn b-average orange-color" href="/" title="Подробнее">Подробнее <span class="lnr lnr-chevron-right"></span></a>
-					</div>
+					<!--{$Globalpages.service_block_6}-->
 				</div>
 			</div>
 		</div>
