--- a/smarty/_header.html
+++ b/smarty/_header.html
@@ -10,11 +10,19 @@
                         <li><span class="lnr lnr-phone-handset"></span> <!--{$Parameters.tels2}--></li>
                     </ul>
                     <ul class="header__social">	
-                        <li><a title="Facebook" target="_blank" href="https://www.facebook.com/"><img width="24px" src="<!--{$SITE__TEMPLATE}-->/images/social_icon/facebook.svg"></a></li>
-                        <li><a title="Instagram" target="_blank" href="https://www.instagram.com/"><img width="24px" src="<!--{$SITE__TEMPLATE}-->/images/social_icon/instagram.svg"></a></li>
-                        <li><a href="viber://chat?number=+380974247922" class="viber" title="Viber" target="_blank"><img width="24px" src="<!--{$SITE__TEMPLATE}-->/images/social_icon/viber.svg"></a></li>
-                        <li class="visible-xs-inline-block"><a href="viber://add?number=380974247922" class="viber" title="Viber" target="_blank"><img width="24px" src="<!--{$SITE__TEMPLATE}-->/images/social_icon/viber.svg"></a></li>				
-                        <li><a href="https://t.me/maxisolar" class="telegram" title="Telegram" target="_blank"><img width="24px" src="<!--{$SITE__TEMPLATE}-->/images/social_icon/telegram.svg"></a></li>
+                        <!--{if $Parameters.fb_link}-->
+                        <li><a title="Facebook" target="_blank" href="<!--{$Parameters.fb_link}-->"><img width="24px" src="<!--{$SITE__TEMPLATE}-->/images/social_icon/facebook.svg"></a></li>
+                        <!--{/if}-->
+                        <!--{if $Parameters.inst_link}-->
+                        <li><a title="Instagram" target="_blank" href="<!--{$Parameters.inst_link}-->"><img width="24px" src="<!--{$SITE__TEMPLATE}-->/images/social_icon/instagram.svg"></a></li>
+                        <!--{/if}-->
+                        <!--{if $Parameters.viber_link}-->
+                        <li><a href="viber://chat?number=+<!--{$Parameters.viber_link}-->" title="Viber" target="_blank"><img width="24px" src="<!--{$SITE__TEMPLATE}-->/images/social_icon/viber.svg"></a></li>
+                        <li class="visible-xs-inline-block"><a href="viber://add?number=<!--{$Parameters.viber_link}-->" title="Viber" target="_blank"><img width="24px" src="<!--{$SITE__TEMPLATE}-->/images/social_icon/viber.svg"></a></li>				
+                        <!--{/if}-->
+                        <!--{if $Parameters.tgme_link}-->
+                        <li><a href="https://t.me/<!--{$Parameters.tgme_link}-->" title="Telegram" target="_blank"><img width="24px" src="<!--{$SITE__TEMPLATE}-->/images/social_icon/telegram.svg"></a></li>
+                        <!--{/if}-->
                     </ul>
                     <ul class="header__language">
                         <!--{section name=i loop=$lng_list}-->
