--- a/smarty/sections.html
+++ b/smarty/sections.html
@@ -1,31 +1,15 @@
 
-//= template/_seo.html
+<!--{include file="_seo.html"}-->
 
 <body>
 
 <!-- Header Start-->
-    //= template/_header.html
-
+    <!--{include file="_header.html"}-->
+    
 <!-- Breadcrumbs-->
-<div class="breadcrumbs__backround wrapper">
-    <div class="container-full">
-		<div class="row">
-			<div class="col-lg-12">
-				<div class="section__title">
-					<div class="title">Новости компани</div>
-					<div class="section__separator">
-						<p>Будем рады нашему сотрудничеству!</p>
-					</div>
-                </div>
-                <div class="path">
-                    <span class="lnr lnr-home"></span> <a href="/" title="Главная">Главная</a> › О компании
-                </div>
-			</div>
-		</div>
-	</div>
-</div>
+    <!--{include file="_path.html"}-->
 
-<!-- Contacts Start-->
+<!-- Content Start-->
     <article>
         <div class="wrapper">
             <div class="container">
@@ -116,16 +100,16 @@
     </article>
 
 <!-- Etaps Start-->
-    //= template/_etaps.html
+    <!--{include file="_etaps.html"}-->
 
 <!-- Promo Start-->
-    //= template/_promo.html
+    <!--{include file="_promo.html"}-->
 
 <!-- Preimushestva Start-->
-    //= template/_advantages.html
+    <!--{include file="_advantages.html"}-->
 
 <!-- Footer Start-->
-    //= template/_footer.html
+    <!--{include file="_footer.html"}-->
 
 </body>
 </html>
