--- a/app/page.html
+++ b/app/page.html
@@ -32,13 +32,59 @@
                 <div class="row">
                     <div class="col-md-12 col-lg-12">
                         <div class="grey__backround padding__lr__40">
-                            <h1>Компания «Maxisolar»</h1>
-                            <p>Компания «Maxisolar» специализируется на строительстве солнечных электростанций любой сложности «под ключ».</p>
-                            <p>Наша команда эффективно и профессионально работает с Клиентами на всех этапах взаимодействия – от консультации и подготовки проекта до ввода объекта в эксплуатацию с подключением «Зеленого тарифа» и последующим сервисным обслуживанием. Специалисты нашей компании имеют успешный опыт работы в солнечной энергетике и прилагают все свои усилия и ресурсы компании для того, чтобы наши Клиенты и Партнеры получали максимальный сервис.</p> 
-                            <p>Специалисты нашей компании имеют успешный опыт работы в солнечной энергетике и прилагают все свои усилия и ресурсы компании для того, чтобы наши Клиенты и Партнеры получали максимальный сервис и качество как в отношении предоставляемых нами услуг, так и в отношении реализуемого оборудования для солнечных электростанций. </p>
-                            <p>Наша команда реализовала большое количество разнообразных проектов для наших Клиентов и мы не останавливаемся на достигнутом.</p>
-                            <p>Делая основной упор на качество и надежность своей работы, мы стараемся при этом соблюдать оптимальное соотношение пропорции "цена/качество" и учитывать желания и запросы наших Заказчиков.</p>
-                            <p>Мы первые в Днепре и Днепропетровской области в декабре 2015 года оформили договор «Зеленого» тарифа для нашего клиента, которому построили сетевую солнечную электростанцию. Мы беремся за сложные и амбициозные проекты, потому что уверенны в своих силах и наш подход к работе гарантирует качественный результат!</p>                   
+                            <h1>Политика конфиденциальности</h1>
+                            <p>Общие положения политики конфиденциальности и защиты персональных данных</p>
+                            <h2>1. Основные термины</h2>
+                            <p>В настоящей Политике конфиденциальности используются следующие термины:</p>
+                            <p><strong>«Администрация сайта maxisolar.com.ua»</strong> (далее – Администрация сайта) – уполномоченные сотрудники, действующие от имени Компании, которые организовывают и (или) осуществляют обработку персональных данных, а также определяют цели обработки персональных данных, состав персональных данных, подлежащих обработке, действия (операции), совершаемые с персональными данными.</p>
+                            <p><strong>«Персональные данные»</strong> - любая информация, относящаяся к прямо или косвенно определенному или определяемому физическому лицу (субъекту персональных данных).</p>
+                            <p><strong>«Обработка персональных данных»</strong> - любое действие (операция) или совокупность действий (операций), совершаемых с использованием средств автоматизации или без использования таких средств с персональными данными, включая сбор, запись, систематизацию, накопление, хранение, уточнение (обновление, изменение), извлечение, использование, обезличивание, блокирование, удаление, уничтожение персональных данных.</p>
+                            <p><strong>«Конфиденциальность персональных данных»</strong> - обязательное для соблюдения требование не допускать распространения персональных данных без согласия субъекта персональных данных.</p>
+                            <p><strong>«Пользователь»</strong> - лицо, имеющее доступ к сайту www.maxisolar.com.ua, посредством сети Интернет и использующее сайт www.maxisolar.com.ua.</p>
+                            <p><strong>«Cookies»</strong> - небольшой фрагмент данных, отправленный веб-сервером и хранимый на компьютере пользователя.</p>
+                            <p><strong>«IP-адрес»</strong> - уникальный сетевой адрес узла в компьютерной сети, построенной по протоколу IP.</p>
+                            <h2>2. Общие положения</h2>
+                            <p>Использование Пользователем сайта www.maxisolar.com.ua означает согласие с настоящей Политикой конфиденциальности и условиями обработки персональных данных Пользователя.</p>
+                            <p>В случае несогласия с условиями Политики конфиденциальности, Пользователь должен прекратить использование сайта www.maxisolar.com.ua. Администрация сайта не проверяет достоверность персональных данных, предоставляемых Пользователем сайта www.maxisolar.com.ua.</p>
+                            <p>Настоящая Политика конфиденциальности применяется только к сайту www.maxisolar.com.ua. Администрация сайта не контролирует и не несет ответственность за сайты третьих лиц, на которые Пользователь может перейти по ссылкам, доступным на сайте.</p>
+                            <h2>3. Предмет политики конфиденциальности</h2>
+                            <p>Настоящая Политика конфиденциальности устанавливает обязательства Администрации сайта www.maxisolar.com.ua по неразглашению и обеспечению режима защиты конфиденциальности персональных данных, которые Пользователь предоставляет при заполнении на сайте www.maxisolar.com.ua контактной формы.</p>
+                            <p>Персональные данные, разрешённые к обработке в рамках настоящей Политики конфиденциальности, предоставляются Пользователем путём заполнения контактной формы и включают в себя следующую информацию:</p>
+                            <ul>
+                            <li>Имя Пользователя;</li>
+                            <li>Контактный телефон Пользователя;</li>
+                            <li>Адрес электронной почты (E-mail).</li>
+                            </ul>
+                            <p>Кроме того, мы автоматически регистрируем ваш компьютер и браузер, включающие IP, ПО, запрашиваемую ссылку.</p>
+                            <p>Администрации сайта не контролирует и не несет ответственность за сайты третьих лиц, на которые Пользователь может перейти по ссылкам, доступным на сайте.</p>
+                            <p>Также на сайте происходит сбор и обработка обезличенных данных о посетителях (в т.ч. файлов «cookie») с помощью сервисов интернет-статистики (Гугл Аналитика , Яндекс Метрика и и других).</p>
+                            <h2>4. Цели сбора персональной информации</h2>
+                            <p>Персональные данные Пользователя сайта могут использоваться в целях:</p>
+                            <ul>
+                            <li>Связаться с Пользователем по контактному телефону;</li>
+                            <li>Связаться с Пользователем по E-mail;</li>
+                            <li>Предложить рекламу, отвечающую запросам и интересам Пользователя;</li>
+                            <li>Собирать данные для улучшения показа персонализированной рекламы.</li>
+                            <li>Улучшить работу нашего сайта;</li>
+                            </ul>
+                            <h2>5. Способы и сроки обработки персональной информации</h2>
+                            <p>Обработка персональных данных Пользователя осуществляется без ограничения срока, любым законным способом, в том числе в информационных системах персональных данных с использованием средств автоматизации или без использования таких средств.</p>
+                            <p>Персональные данные Пользователя могут быть переданы третьим лицам в том случае, если это уполномоченные органы государственной власти Украины и только по основаниям и в порядке, установленным законодательством Украины.</p>
+                            <p>Администрация сайта принимает необходимые организационные и технические меры для защиты персональной информации Пользователя от неправомерного или случайного доступа, уничтожения, изменения, блокирования, копирования, распространения, а также от иных неправомерных действий третьих лиц.</p>
+                            <p>Срок обработки персональных данных является неограниченным. Пользователь может в любой момент отозвать свое согласие на обработку персональных данных, направив Администрации сайта уведомление посредством электронной почты на электронный адрес&nbsp;<a href="mailto:info@maxisolar.com.ua">info@maxisolar.com.ua</a> с пометкой «Отзыв согласия на обработку персональных данных».</p>
+                            <h2>6. Использование файлов «cookie»</h2>
+                            <p>Наши файлы «cookie» используются для улучшения доступа к сайту и определения повторных посещений. Файлы «cookie» не передают никакой конфиденциальной информации.</p>
+                            <h2>7. Ответственность сторон</h2>
+                            <p>В случае утраты или разглашения Конфиденциальной информации Администрация сайта не несёт ответственность, если данная конфиденциальная информация:</p>
+                            <ul>
+                            <li>Стала публичным достоянием до её утраты или разглашения.</li>
+                            <li>Была получена от третьей стороны до момента её получения Администрацией сайта.</li>
+                            <li>Была разглашена с согласия Пользователя.</li>
+                            <li>Была разглашена вследствие взлома, копирования, распространения, а также любых других неправомерных действий третьих лиц.</li>
+                            </ul>
+                            <h2>8. Дополнительные условия</h2>
+                            <p>Администрация сайта вправе вносить изменения в настоящую Политику конфиденциальности без уведомления Пользователя. Новая Политика конфиденциальности вступает в силу с момента ее размещения на официальном сайте компании, который находится по адресу <a title="https://maxisolar.com.ua/" href="https://maxisolar.com.ua/">https://maxisolar.com.ua/</a>, если иное не предусмотрено новой редакцией Политики конфиденциальности.</p>
+                            <p>Все предложения или вопросы по настоящей Политике конфиденциальности следует сообщать на контактный E-mail компании: <a href="mailto:info@maxisolar.com.ua">info@maxisolar.com.ua</a>. Действующая Политика конфиденциальности размещена на странице, по адресу: <a title="https://maxisolar.com.ua/privacy-policy.htm" href="../../privacy-policy.htm">https://maxisolar.com.ua/privacy-policy.htm</a>.</p>
                         </div>
                     </div>   
                 </div>
