--- a/smarty/projects.html
+++ b/smarty/projects.html
@@ -1,29 +1,45 @@
 
-//= template/_seo.html
+<!--{include file="_seo.html"}-->
 
 <body>
 
 <!-- Header Start-->
-    //= template/_header.html
+    <!--{include file="_header.html"}-->
 
 <!-- Breadcrumbs-->
-<div class="breadcrumbs__backround wrapper">
-    <div class="container-full">
-		<div class="row">
-			<div class="col-lg-12">
-				<div class="section__title">
-					<div class="title">Реализованные проекты</div>
-					<div class="section__separator">
-						<p>Будем рады нашему сотрудничеству!</p>
-					</div>
+    <div class="breadcrumbs__backround wrapper">
+        <div class="container-full">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="section__title">
+                        <div class="title"><!--{$Parameters.projects_title}--></div>
+                        <div class="section__separator">
+                            <p><!--{$Parameters.projects_titledpn}--></p>
+                        </div>
+                    </div>
+                    <div class="path">
+                        <!--{if $way_project.pro_page}-->
+                                <span class="lnr lnr-home"></span> <a href="<!--{$way_project.waybackurl}-->" title="<!--{$way_project.waybackname}-->"><!--{$way_project.waybackname}--></a> 
+                                &rsaquo; 
+                            <a href="<!--{$way_project.name_path_href}-->" title="<!--{$way_project.name}-->"><!--{$way_project.name}--></a> 
+                                &rsaquo;
+                                <!--{$way_project.project_path_name}-->
+                        <!--{else}-->
+                            <!--{if $way.pro_list}-->
+                                <a href="<!--{$way.waybackurl}-->" title="<!--{$way.waybackname}-->"><!--{$way.waybackname}--></a> 
+                                    &rsaquo; 
+                                <!--{if $way.name_path}-->
+                                    <!--{$way.name_path}-->
+                                <!--{else}-->
+                                    <!--{$way.name}-->
+                                <!--{/if}-->
+                            <!--{/if}-->
+                        <!--{/if}-->
+                    </div>
                 </div>
-                <div class="path">
-                    <span class="lnr lnr-home"></span> <a href="/" title="Главная">Главная</a> › Наши проекты
-                </div>
-			</div>
-		</div>
-	</div>
-</div>
+            </div>
+        </div>
+    </div>
 
 <!-- Content Start-->
     <article>
@@ -40,144 +56,60 @@
                     </div>
                 </div>
                 <div class="row">
+                    <!--{section name=i loop=$gallerylist.content}-->
                     <div class="col-lg-4">
                         <div class="col__project center">
                             <div class="col__project__link">
-                                <img src="/images/project-3.jpg" alt="Сетевая СЭС 32 кВт, с. Куриловка, Днепр. обл.">
+                                <img src="<!--{$gallerylist.content[i].img}-->" alt="<!--{$gallerylist.content[i].name}-->">
                                 <div class="col__project__layer"></div>
                                 <div class="col__project__link">
-                                    <a class="btn white-color b-large b-60" href="/project-page.html"><span class="lnr lnr-link"></span> Подробнее</a>
-                                    <a data-reveal-id="findprice" class="btn orange-color b-large b-60" href="/">Узнать стоимость</a>
+                                    <a class="btn white-color b-large b-60" title="<!--{$Parameters.get_more}-->" href="<!--{$gallerylist.content[i].href}-->"><span class="lnr lnr-link"></span> <!--{$Parameters.get_more}--></a>
+                                    <a data-reveal-id="findprice" class="btn orange-color b-large b-60" title="<!--{$Parameters.get_price}-->"><!--{$Parameters.get_price}--></a>
                                 </div>   
-                                <span class="col__project__tariff">Зеленый тариф</span>			
+                                <!--{if $gallerylist.content[i].green_tarif == 1}-->
+                                <span class="col__project__tariff">Зеленый тариф</span>
+                                <!--{/if}-->		
                             </div>
                             <div class="title">
-                                <a href="/project-page.html" title="Сетевая СЭС 32 кВт, с. Куриловка, Днепр. обл. ">Сетевая СЭС 32 кВт, с. Куриловка, Днепр. обл.</a>
-                                <div class="description">Строительство сетевой солнечной электростанции 32 кВт. в Днепропетровской обл. с. Куриловка</div>
-                                <div class="date">24 Ноября, 2020</div>
+                                <a href="<!--{$gallerylist.content[i].href}-->" title="<!--{$gallerylist.content[i].name}-->"><!--{$gallerylist.content[i].name}--></a>
+                                <div class="description"><!--{$gallerylist.content[i].short_dpn}--></div>
+                                <div class="date"><!--{$gallerylist.content[i].date}--></div>
                             </div>
                         </div>   
                     </div>
-                    <div class="col-lg-4">
-                        <div class="col__project center">
-                            <div class="col__project__link">
-                                <img src="/images/project-2.jpg" alt="Сетевая СЭС 32 кВт, с. Куриловка, Днепр. обл.">
-                                <div class="col__project__layer"></div>
-                                <div class="col__project__link">
-                                    <a class="btn white-color b-large b-60" href="/"><span class="lnr lnr-link"></span> Подробнее</a>
-                                    <a data-reveal-id="findprice" class="btn orange-color b-large b-60" href="/">Узнать стоимость</a>
-                                </div>   
-                                <span class="col__project__tariff">Зеленый тариф</span>			
-                            </div>
-                            <div class="title">
-                                <a href="/" title="Сетевая СЭС 32 кВт, с. Куриловка, Днепр. обл. ">Сетевая СЭС 32 кВт, с. Куриловка, Днепр. обл.</a>
-                                <div class="description">Строительство сетевой солнечной электростанции 32 кВт. в Днепропетровской обл. с. Куриловка</div>
-                                <div class="date">24 Ноября, 2020</div>
-                            </div>
-                        </div>   
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="col__project center">
-                            <div class="col__project__link">
-                                <img src="/images/project-1.jpg" alt="Сетевая СЭС 32 кВт, с. Куриловка, Днепр. обл.">
-                                <div class="col__project__layer"></div>
-                                <div class="col__project__link">
-                                    <a class="btn white-color b-large b-60" href="/"><span class="lnr lnr-link"></span> Подробнее</a>
-                                    <a data-reveal-id="findprice" class="btn orange-color b-large b-60" href="/">Узнать стоимость</a>
-                                </div>   
-                                <span class="col__project__tariff">Зеленый тариф</span>			
-                            </div>
-                            <div class="title">
-                                <a href="/" title="Сетевая СЭС 32 кВт, с. Куриловка, Днепр. обл. ">Сетевая СЭС 32 кВт, с. Куриловка, Днепр. обл.</a>
-                                <div class="description">Строительство сетевой солнечной электростанции 32 кВт. в Днепропетровской обл. с. Куриловка</div>
-                                <div class="date">24 Ноября, 2020</div>
-                            </div>
-                        </div>   
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="col__project center">
-                            <div class="col__project__link">
-                                <img src="/images/project-1.jpg" alt="Сетевая СЭС 32 кВт, с. Куриловка, Днепр. обл.">
-                                <div class="col__project__layer"></div>
-                                <div class="col__project__link">
-                                    <a class="btn white-color b-large b-60" href="/"><span class="lnr lnr-link"></span> Подробнее</a>
-                                    <a data-reveal-id="findprice" class="btn orange-color b-large b-60" href="/">Узнать стоимость</a>
-                                </div>   
-                                <span class="col__project__tariff">Зеленый тариф</span>			
-                            </div>
-                            <div class="title">
-                                <a href="/" title="Сетевая СЭС 32 кВт, с. Куриловка, Днепр. обл. ">Сетевая СЭС 32 кВт, с. Куриловка, Днепр. обл.</a>
-                                <div class="description">Строительство сетевой солнечной электростанции 32 кВт. в Днепропетровской обл. с. Куриловка</div>
-                                <div class="date">24 Ноября, 2020</div>
-                            </div>
-                        </div>   
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="col__project center">
-                            <div class="col__project__link">
-                                <img src="/images/project-2.jpg" alt="Сетевая СЭС 32 кВт, с. Куриловка, Днепр. обл.">
-                                <div class="col__project__layer"></div>
-                                <div class="col__project__link">
-                                    <a class="btn white-color b-large b-60" href="/"><span class="lnr lnr-link"></span> Подробнее</a>
-                                    <a data-reveal-id="findprice" class="btn orange-color b-large b-60" href="/">Узнать стоимость</a>
-                                </div>   
-                                <span class="col__project__tariff">Зеленый тариф</span>			
-                            </div>
-                            <div class="title">
-                                <a href="/" title="Сетевая СЭС 32 кВт, с. Куриловка, Днепр. обл. ">Сетевая СЭС 32 кВт, с. Куриловка, Днепр. обл.</a>
-                                <div class="description">Строительство сетевой солнечной электростанции 32 кВт. в Днепропетровской обл. с. Куриловка</div>
-                                <div class="date">24 Ноября, 2020</div>
-                            </div>
-                        </div>   
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="col__project center">
-                            <div class="col__project__link">
-                                <img src="/images/project-3.jpg" alt="Сетевая СЭС 32 кВт, с. Куриловка, Днепр. обл.">
-                                <div class="col__project__layer"></div>
-                                <div class="col__project__link">
-                                    <a class="btn white-color b-large b-60" href="/"><span class="lnr lnr-link"></span> Подробнее</a>
-                                    <a data-reveal-id="findprice" class="btn orange-color b-large b-60" href="/">Узнать стоимость</a>
-                                </div>   
-                                <span class="col__project__tariff">Зеленый тариф</span>			
-                            </div>
-                            <div class="title">
-                                <a href="/" title="Сетевая СЭС 32 кВт, с. Куриловка, Днепр. обл. ">Сетевая СЭС 32 кВт, с. Куриловка, Днепр. обл.</a>
-                                <div class="description">Строительство сетевой солнечной электростанции 32 кВт. в Днепропетровской обл. с. Куриловка</div>
-                                <div class="date">24 Ноября, 2020</div>
-                            </div>
-                        </div>   
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="pagination light-theme simple-pagination">
-                            <ul>
-                                <li class="hidden-xs"><a class="page-current" href="/" title="Перейти на первую страницу">Первая страница</a></li>
-                                <li><span class="current">1</span></li>
-                                <li><a href="/" title="Перейти на 2 страницу">2</a></li>
-                                <li><a href="/" title="Перейти на 3 страницу">3</a></li>
-                                <li><a href="/" title="Перейти на 4 страницу">4</a></li>
-                                <li class="hidden-xs"><a class="page-current" href="/" title="Перейти на последнюю страницу">Последняя страница</a></li>
-                            </ul>
+                        <!--{if $smarty.section.i.iteration % 2 == 0}--> 
+                        <div class="visible-sm">
+                            <div class="clearfix hidden-xs"></div>
                         </div>
-                    </div>
+                        <!--{/if}-->
+                        
+                        <!--{if $smarty.section.i.iteration % 3 == 0}--> 
+                        <div class="visible-md visible-lg">
+                            <div class="clearfix hidden-xs"></div>
+                        </div>
+                        <!--{/if}-->
+                    <!--{/section}-->
                 </div>
+                
+                <!--{if $paginal}-->
+                    <!--{include file="_paginal.htm"}-->
+                <!--{/if}-->
+
             </div>
         </div>
     </article>
 
 <!-- Etaps Start-->
-    //= template/_etaps.html
+    <!--{include file="_etaps.html"}-->
 
 <!-- Promo Start-->
-    //= template/_promo.html
+    <!--{include file="_promo.html"}-->
 
 <!-- Preimushestva Start-->
-    //= template/_advantages.html
+    <!--{include file="_advantages.html"}-->
 
 <!-- Footer Start-->
-    //= template/_footer.html
+    <!--{include file="_footer.html"}-->
 
 </body>
 </html>
