--- a/smarty/_header.html
+++ b/smarty/_header.html
@@ -17,11 +17,11 @@
                         <li><a title="Instagram" target="_blank" href="<!--{$Parameters.inst_link}-->"><img width="24px" src="<!--{$SITE__TEMPLATE}-->/images/social_icon/instagram.svg"></a></li>
                         <!--{/if}-->
                         <!--{if $Parameters.viber_link}-->
-                        <li><a href="viber://chat?number=+<!--{$Parameters.viber_link}-->" title="Viber" target="_blank"><img width="24px" src="<!--{$SITE__TEMPLATE}-->/images/social_icon/viber.svg"></a></li>
-                        <li class="visible-xs-inline-block"><a href="viber://add?number=<!--{$Parameters.viber_link}-->" title="Viber" target="_blank"><img width="24px" src="<!--{$SITE__TEMPLATE}-->/images/social_icon/viber.svg"></a></li>				
+                        <li><a title="Viber" target="_blank" href="viber://chat?number=+<!--{$Parameters.viber_link}-->"><img width="24px" src="<!--{$SITE__TEMPLATE}-->/images/social_icon/viber.svg"></a></li>
+                        <li class="visible-xs-inline-block"><a title="Viber" target="_blank" href="viber://add?number=<!--{$Parameters.viber_link}-->"><img width="24px" src="<!--{$SITE__TEMPLATE}-->/images/social_icon/viber.svg"></a></li>				
                         <!--{/if}-->
                         <!--{if $Parameters.tgme_link}-->
-                        <li><a href="https://t.me/<!--{$Parameters.tgme_link}-->" title="Telegram" target="_blank"><img width="24px" src="<!--{$SITE__TEMPLATE}-->/images/social_icon/telegram.svg"></a></li>
+                        <li><a title="Telegram" target="_blank" href="https://t.me/<!--{$Parameters.tgme_link}-->"><img width="24px" src="<!--{$SITE__TEMPLATE}-->/images/social_icon/telegram.svg"></a></li>
                         <!--{/if}-->
                     </ul>
                     <ul class="header__language">
@@ -44,7 +44,7 @@
         </div>
     </div>
     <div class="header__navigation">
-        <div class="container">
+        <div class="container-full">
             <div class="row">
                 <div class="col-xs-12 col-sm-4 col-md-2 col-lg-2">
                     <div class="logo">
