--- a/smarty/_etaps.html
+++ b/smarty/_etaps.html
@@ -33,17 +33,17 @@
 				<ul class="footer-social">	
 					<li><!--{$Parameters.support_footer_text}--> </li>
 					<!--{if $Parameters.fb_link}-->
-                    <li><a title="Facebook" target="_blank" href="<!--{$Parameters.fb_link}-->"><img width="24px" src="<!--{$SITE__TEMPLATE}-->/images/social_icon/facebook.svg"></a></li>
+                    <li><a title="Facebook" target="_blank" href="<!--{$Parameters.fb_link}-->"><img src="<!--{$SITE__TEMPLATE}-->/images/social_icon/facebook.svg"></a></li>
                     <!--{/if}-->
                     <!--{if $Parameters.inst_link}-->
-                    <li><a title="Instagram" target="_blank" href="<!--{$Parameters.inst_link}-->"><img width="24px" src="<!--{$SITE__TEMPLATE}-->/images/social_icon/instagram.svg"></a></li>
+                    <li><a title="Instagram" target="_blank" href="<!--{$Parameters.inst_link}-->"><img src="<!--{$SITE__TEMPLATE}-->/images/social_icon/instagram.svg"></a></li>
                     <!--{/if}-->
                     <!--{if $Parameters.viber_link}-->
-                    <li><a href="viber://chat?number=+<!--{$Parameters.viber_link}-->" title="Viber" target="_blank"><img width="24px" src="<!--{$SITE__TEMPLATE}-->/images/social_icon/viber.svg"></a></li>
-                    <li class="visible-xs-inline-block"><a href="viber://add?number=<!--{$Parameters.viber_link}-->" title="Viber" target="_blank"><img width="24px" src="<!--{$SITE__TEMPLATE}-->/images/social_icon/viber.svg"></a></li>				
+                    <li><a title="Viber" target="_blank" href="viber://chat?number=+<!--{$Parameters.viber_link}-->"><img src="<!--{$SITE__TEMPLATE}-->/images/social_icon/viber.svg"></a></li>
+                    <li class="visible-xs-inline-block"><a title="Viber" target="_blank" href="viber://add?number=<!--{$Parameters.viber_link}-->"><img src="<!--{$SITE__TEMPLATE}-->/images/social_icon/viber.svg"></a></li>				
                     <!--{/if}-->
                     <!--{if $Parameters.tgme_link}-->
-                    <li><a href="https://t.me/<!--{$Parameters.tgme_link}-->" title="Telegram" target="_blank"><img width="24px" src="<!--{$SITE__TEMPLATE}-->/images/social_icon/telegram.svg"></a></li>
+                    <li><a title="Telegram" href="https://t.me/<!--{$Parameters.tgme_link}-->" target="_blank"><img src="<!--{$SITE__TEMPLATE}-->/images/social_icon/telegram.svg"></a></li>
                     <!--{/if}-->
 				</ul>
 			</div>
