--- a/smarty/_footer.html
+++ b/smarty/_footer.html
@@ -6,7 +6,7 @@
 				<div class="footer__menu">
 					<ul>
 						<!--{section name=i loop=$Menu2}-->
-							<li>- <a href="<!--{$Menu2[i].sysname}-->" title="<!--{$Menu2[i].name}-->"><!--{$MMenu[i].name}--></a></li>
+							<li>- <a href="<!--{$Menu2[i].sysname}-->" title="<!--{$Menu2[i].name}-->"><!--{$Menu2[i].name}--></a></li>
 						<!--{/section}-->
 					</ul>
 				</div>
@@ -39,17 +39,17 @@
 				<ul class="footer-social">	
 					<li><!--{$Parameters.support_footer_text}--> </li>
 					<!--{if $Parameters.fb_link}-->
-                    <li><a title="Facebook" target="_blank" href="<!--{$Parameters.fb_link}-->"><img width="24px" src="<!--{$SITE__TEMPLATE}-->/images/social_icon/facebook.svg"></a></li>
+                    <li><a title="Facebook" target="_blank" href="<!--{$Parameters.fb_link}-->"><img src="<!--{$SITE__TEMPLATE}-->/images/social_icon/facebook.svg"></a></li>
                     <!--{/if}-->
                     <!--{if $Parameters.inst_link}-->
-                    <li><a title="Instagram" target="_blank" href="<!--{$Parameters.inst_link}-->"><img width="24px" src="<!--{$SITE__TEMPLATE}-->/images/social_icon/instagram.svg"></a></li>
+                    <li><a title="Instagram" target="_blank" href="<!--{$Parameters.inst_link}-->"><img src="<!--{$SITE__TEMPLATE}-->/images/social_icon/instagram.svg"></a></li>
                     <!--{/if}-->
                     <!--{if $Parameters.viber_link}-->
-                    <li><a href="viber://chat?number=+<!--{$Parameters.viber_link}-->" title="Viber" target="_blank"><img width="24px" src="<!--{$SITE__TEMPLATE}-->/images/social_icon/viber.svg"></a></li>
-                    <li class="visible-xs-inline-block"><a href="viber://add?number=<!--{$Parameters.viber_link}-->" title="Viber" target="_blank"><img width="24px" src="<!--{$SITE__TEMPLATE}-->/images/social_icon/viber.svg"></a></li>				
+                    <li><a title="Viber" target="_blank" href="viber://chat?number=+<!--{$Parameters.viber_link}-->"><img src="<!--{$SITE__TEMPLATE}-->/images/social_icon/viber.svg"></a></li>
+                    <li class="visible-xs-inline-block"><a title="Viber" target="_blank" href="viber://add?number=<!--{$Parameters.viber_link}-->"><img src="<!--{$SITE__TEMPLATE}-->/images/social_icon/viber.svg"></a></li>				
                     <!--{/if}-->
                     <!--{if $Parameters.tgme_link}-->
-                    <li><a href="https://t.me/<!--{$Parameters.tgme_link}-->" title="Telegram" target="_blank"><img width="24px" src="<!--{$SITE__TEMPLATE}-->/images/social_icon/telegram.svg"></a></li>
+                    <li><a title="Telegram" href="https://t.me/<!--{$Parameters.tgme_link}-->" target="_blank"><img src="<!--{$SITE__TEMPLATE}-->/images/social_icon/telegram.svg"></a></li>
                     <!--{/if}-->
 				</ul>
 				<div class="copyright"><!--{$Parameters.copyrate}--></div>
@@ -63,55 +63,14 @@
 <!-- Scroll Up -->
 <a class="scrollup"><span class="lnr lnr-chevron-up"></span></a>
 
-<div id="zvonok" class="reveal-modal">
-    <div class="title-form">Обратный звонок</div> 
-    <div class="main-data">Мы свяжемся с Вами в ближайшее время!</div>
-    <form id="calls" name="calls" method="post" onsubmit="javascript: feedback(this,'','/'); return false;">
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="form-title">Ваше имя:</div>
-                <input type="text" id="calls_fio" name="required" class="form-field" value="Алексей" title="Ваше имя">
-            </div>
-            <div class="col-lg-12">
-                <div class="form-title">Ваш телефон:</div>
-                <input type="text" id="calls_tel" autocomplete="off" class="form-field" name="required" value="" title="Ваш телефон">
-            </div>
-			<div class="result"></div>
-            <div class="col-lg-12">
-                <button type="submit" name="submit" class="btn b-full b-large orange-color" title="Перезвоните мне">Перезвоните мне <span class="lnr lnr-chevron-right"></span></button>
-            </div>
-        </div>
-    </form> 
-	<div class="personal-data">Данные будут использованы только для связи с вами!</div>
-	<a class="close-reveal-modal">&#215;</a>
-</div>
+<!-- Calls Modal-->
+    <!--{include file="forms/feedbackcall.htm"}-->
 
-<div id="findprice" class="reveal-modal">
-    <div class="title-form">Узнать стоимость</div> 
-    <div class="main-data">Мы свяжемся с Вами в ближайшее время!</div>
-    <form id="price" name="price" method="post" onsubmit="javascript: feedback(this,'','/'); return false;">
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="form-title">Ваше имя:</div>
-                <input type="text" id="price_fio" name="required" class="form-field" value="Алексей" title="Ваше имя">
-            </div>
-            <div class="col-lg-12">
-                <div class="form-title">Ваш телефон:</div>
-                <input type="text" id="price_tel" autocomplete="off" class="form-field" name="required" value="" title="Ваш телефон">
-			</div>
-			<div class="col-lg-12">
-                <div class="form-title">Ваш E-mail:</div>
-                <input type="text" id="price_tel" autocomplete="off" class="form-field" name="optional" value="" title="Ваш E-mail">
-            </div>
-			<div class="result"></div>
-            <div class="col-lg-12">
-                <button type="submit" name="submit" class="btn b-full b-large orange-color" title="Отправить заявку">Отправить заявку <span class="lnr lnr-chevron-right"></span></button>
-            </div>
-        </div>
-    </form> 
-	<div class="personal-data">Данные будут использованы только для связи с вами!</div>
-	<a class="close-reveal-modal">&#215;</a>
-</div>
+<!-- Costing Modal-->
+    <!--{include file="forms/feedbackcostings.htm"}-->
+
+<!-- Consultation Modal-->
+    <!--{include file="forms/feedbackconsultation.htm"}-->
 
 <link rel="stylesheet" href="<!--{$SITE__TEMPLATE}-->/css/linear-icons.css">
 
