--- a/smarty/project-page.html
+++ b/smarty/project-page.html
@@ -1,4 +1,3 @@
-
 <!--{include file="_seo.html"}-->
 
 <body>
@@ -99,7 +98,9 @@
                         data-wow-delay=".2s">
                         <div class="grey__backround padding__lr__40">
                             <div class="dpn__project">
+                                <!--{if $list[0].video}-->
                                 <span href="<!--{$list[0].video}-->" class="cd-mvideo youtube__video"><span class="lnr lnr-film-play"></span> Видео - обзор</span>
+                                <!--{/if}-->
                                 <!--{if $list[0].green_tarif == 1}-->
                                 <span class="green__tariff"><span class="lnr lnr-leaf"></span> «Зеленый» тариф</span>
                                 <!--{/if}-->
